fix(single): fix featured image display on mobile

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -151,12 +151,19 @@
   }
 
   .featured-image {
+    display: flex;
+    aspect-ratio: 21 / 9;
+    @include object-fit(cover);
     margin: 2rem auto 0;
+    overflow: hidden;
+    background-color: lighten($card-background-color, 2%);
+    @include border-radius($card-border-radius $card-border-radius 0 0);
+
+    [theme=dark] & {
+      background-color: darken($card-background-color-dark, 2%);
+    }
 
     img {
-      height: $card-height;
-      @include border-radius($card-border-radius $card-border-radius 0 0);
-
       &.lazyloaded {
         @include object-fit(cover);
       }
